--- a/inicio.css
+++ b/inicio.css
@@ -101,8 +101,8 @@ body {
 }
 
 .card img {
-    height: 400px;
-    width: 400px;
+    height: 414px;
+    width: 414px;
 }
 
 /* Estilo do Footer */
@@ -134,4 +134,9 @@ footer  {
     #cartao:hover {
         transform: translateY(-10px); /* Movimento para cima */
         box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2); /* Sombra para dar destaque */
+    }.divider{
+         border: none; /* Remove a borda padrão */
+            height: 2px; /* Define a altura da linha */
+            background-color: #000000; /* Cor da linha */
+            margin: 0px 0; /* Distância das linhas acima e abaixo */
     }
