--- a/inicio.css
+++ b/inicio.css
@@ -1,4 +1,7 @@
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
+
 @import url('https://fonts.googleapis.com/css2?family=Epilogue:ital,wght@0,100..900;1,100..900&family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 
 header {
     background-color: #8d2de2;
@@ -139,4 +142,8 @@ footer  {
             height: 2px; /* Define a altura da linha */
             background-color: #000000; /* Cor da linha */
             margin: 0px 0; /* Distância das linhas acima e abaixo */
+    }
+    #icon-inicio,#icon-prod,#icon-quem,#icon-contato{
+        padding-right:8px ;
+        font-size: 18px;
     }
